# Unpacker

./: .gitignore  LICENSE  PROJECT_SCENARIO.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: config.yaml
docs/: MEDIUM_ARTICLE_UNPACKER_GUIDE.md
scripts/: run_unpacker.py  step0_find_and_download_samples.py  verify_unpacking.py
src/unpacker/: __init__.py  cli.py  orchestrator.py  types.py
src/unpacker/detector/: __init__.py  base.py  entropy.py  format_.py  heuristics.py  pipeline.py  sections.py  signatures.py
src/unpacker/pe_rebuilder/: __init__.py  iat.py
src/unpacker/unpackers/: __init__.py  _qiling_shared.py  _unipacker_shared.py  aspack.py  base.py  generic.py  mpress.py  themida.py  upx.py  vmprotect.py
tests/: test_detector.py
